# weavehack

./: .gitignore  Dockerfile  README.md  clean-spec.yaml  doc_agent_fixes_summary.md  frontend_root_agent_integration.md  main.py  manifest.json  pyproject.toml  requirements.txt  test_a2a_communication.py  test_a2a_proper.py  test_code_extraction.py  test_doc_extractor_debug.py  test_frontend_root_agent.py  test_minimal_a2a.py  test_root_agent_workflow.py  test_simple_a2a.py
a2atest/: server.py
agents/: __init__.py  adk-demo.py  doc_extrator.py
agents/document_extrator/: __init__.py  __main__.py  agent.py  doc_extrator.py  task_manager.py  temp.py
agents/mcp_generator/: __init__.py  __main__.py  agent.py  task_manager.py
agents/root_agent/: __init__.py  __main__.py  agent.py  task_manager.py  test_client.py
agents/workflow_generator/: __init__.py  __main__.py  agent copy.py  agent.py  agent_old.py  task_manager.py
lib/: exa.py
mcp/: fly.toml  package.json  requirements.txt  start_server.py  weather_server.py
mcp-manifest-maker-magic/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
mcp-manifest-maker-magic/src/: index.css
mcp-manifest-maker-magic/src/pages/: Index.tsx
mcp-server/: README.md  convert_to_mcp.py  demo_conversion.py  example_weather_functions.py  http_weather_server.py  modular_mcp_server.py  test_server.py
mcp/plugins/: weather.py
mcp_boilerplate/: Dockerfile  pyproject.toml
plugins/: math_tools.py
scripts/: discover.py  exa_test.py  stagehand_test.py
tools/: doc_extrator_tools.py
(+2 files in other folders)
