[project]
name = "weavehacks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.11",
    "crewai>=0.141.0",
    "exa-py>=1.14.16",
    "google-adk>=1.6.1",
    "openai>=1.95.1",
    "python-a2a>=0.5.9",
    "python-dotenv>=1.1.1",
    "stagehand-py>=0.3.10",
    "uvicorn>=0.35.0",
    "weave>=0.51.56",
]
